# RandomCode

Game/: Makefile  game
GapBuffer/: Makefile
Hello_World_OS/: HelloWorldOS.iso  Makefile  bochslog.txt  bochsrc.txt  kmain.c  link.ld  loader.s  pres.md
MemoryManagement/: free_list_test  main.c  malloc_freelist.h
MyRPG/: Makefile  myrpg
OSDEV/: Makefile  assert.c  assert.h  bochslog.txt  bochsrc.txt  descriptor_tables.c  descriptor_tables.h  gdt.s  interrupt.s  io.c  io.h  isr.c  isr.h  kheap.c  kheap.h  kmain.c  link.ld  loader.s  monitor.c  monitor.h  ordered_array.c  ordered_array.h  paging.c  paging.h  strings.c  strings.h  timer.c  timer.h
SDLGameDevelopment/: Makefile  game  makescript.sh  test_vector.cpp
SimpleDBTutorial/: Makefile  README.md  simpledb.c
c++/: LinkedList.cpp  LinkedList.h  linkedListExample  main.cpp
collatz/: collatz  collatz.c
games/Breakout/: Amazon.com InfoSec CA G3.crt  Breakout  CMakeCache.txt  CMakeLists.txt  Game.cpp  Game.h  GameBall.cpp  GameBall.h  GameObjectManager.cpp  GameObjectManager.h  MainMenu.cpp  MainMenu.h  Makefile  PlayerPaddle.cpp  PlayerPaddle.h  SplashScreen.cpp  SplashScreen.h  VisibleGameObject.cpp  VisibleGameObject.h  cmake_install.cmake  headers.h  main.cpp
games/Breakout/cmake_modules/: FindSFML.cmake
games/WormEngine/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  WormEngine  cmake_install.cmake  pub_cert.pem  test_split.old
games/WormEngine/res/: basic.frag  basic.vert  reverse.vert
games/WormEngine/src/: Debug.h  FileUtils.cpp  FileUtils.h  Graphics.h  Math.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Window.cpp  Window.h  main.cpp
games/opengl_tut/: CMakeCache.txt  CMakeLists.txt  Makefile  OpenGLTut  cmake_install.cmake  main.cpp
kilo/: Makefile  kilo  kilo.c  test.txt
mac_nasm_tutorial/: Makefile  hello.asm
my_malloc/: main.c  my_malloc
rust_os/: Cargo.toml  Makefile  Xargo.toml
rust_os/src/: lib.rs  vga_buffer.rs
rust_os/src/arch/x86_64/: boot.s  long_mode_init.s  multiboot_header.s
rust_os/src/interrupts/: gdt.rs  mod.rs
rust_os/src/memory/: area_frame_allocator.rs  heap_allocator.rs  mod.rs  stack_allocator.rs
rust_os/src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
threading/: README.md  (+4 more)
(+298 files in other folders)
