[package]
name = "rust_os"
version = "0.1.0"
authors = ["Phillipp Oppermann <dev@phil-opp.com"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "0.9.1"
bit_field = "0.7.0"
linked_list_allocator = "0.5.0"
multiboot2 = "0.1.0"
once = "0.3.3"
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.1.0"
x86_64 = "0.1.2"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]
